# pano

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp  pano.tiff  panoSet.cpp  panoSet.h
include/: panoSet.hpp
src/: panoSet.cpp
