cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
project( pano )
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB includes include/*.hpp)
file(GLOB srcs src/*.cpp)
add_executable(main main.cpp ${includes} ${srcs})
target_link_libraries( main ${OpenCV_LIBS})